--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.3",
     "@angular/animations": "^6.1.0",
+    "@angular/cdk": "^6.2.0",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
+    "@angular/material": "^6.2.0",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "angular-particle": "^1.0.4",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
     "rxjs": "^6.0.0",
+    "typed.js": "^2.0.8",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
